--- a/src/components/MainContent/MainContent.scss
+++ b/src/components/MainContent/MainContent.scss
@@ -15,6 +15,11 @@
         button {
             position: relative;
 
+            &.active {
+                color: black;
+                cursor: default;
+            }
+            
             &:before {
                 content: '';
                 position: absolute;
@@ -27,22 +32,7 @@
                 transition: all .5s;
             }
 
-            &:hover:before {
-                width: 100%;
-            }
-        }
-
-        button.active {
-            &:before {
-                content: '';
-                position: absolute;
-                left: 0;
-                bottom: 0;
-                border-bottom: 1px solid #ff6163;
-                width: 100%;
-            }
-
-            &:hover:before {
+            &.active::before, &:hover:before {
                 width: 100%;
             }
         }
@@ -57,8 +47,7 @@
 
     &__products {
         display: grid;
-        grid-template-columns: repeat(auto-fit, 250px);
-        grid-template-rows: 500px;
+        grid-template-columns: repeat(auto-fit, 240px);
         grid-row-gap: 50px;
         grid-column-gap: 20px;
         -webkit-box-pack: center;
@@ -67,17 +56,17 @@
     }
 }
 
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 1024px) {
     .content {
         &__products{
             grid-template-columns: repeat(auto-fit, 200px);
-            grid-template-rows: 400px;
-            
         }
     }
 }
-
-
-.active {
-    color: black;
+@media screen and (max-width: 425px) {
+    .content {
+        &__products{
+            grid-template-columns: repeat(auto-fit, 150px);
+        }
+    }
 }
