--- a/src/components/Products/Products.scss
+++ b/src/components/Products/Products.scss
@@ -1,7 +1,5 @@
 .product {
-    margin: 0 auto;
     display: grid;
-    grid-template-columns: 1fr;
     grid-template-rows: 70% 30%;
 
     &__img {
@@ -14,20 +12,12 @@
             right: 10px;
             top: 10px;
 
-            display: -webkit-box;
-
-            display: -ms-flexbox;
-
-            display: flex;
-            -webkit-box-pack: center;
-                -ms-flex-pack: center;
-                    justify-content: center;
-            -webkit-box-align: center;
-                -ms-flex-align: center;
-                    align-items: center;
+            display: grid;
+            -ms-flex-line-pack: center;
+                align-content: center;
             width: 35px;
             height: 35px;
-
+            
             background-color: rgba(255, 255, 255, 0.564);
             border-radius: 50%;
             
@@ -98,5 +88,18 @@
         }
     }
 }
-
+@media screen and (max-width: 700px) {
+    .product{
+        &__preview{
+            &-title{
+                font-size: 14px;
+            }
+            &-buy{
+                p{
+                    font-size: 20px;
+                }
+            }
+        }
+    }
+}
 
