--- a/src/pages/SingleProductPage/SingleProduct.scss
+++ b/src/pages/SingleProductPage/SingleProduct.scss
@@ -27,10 +27,11 @@
     }
 
     &__information {
-
+        display: grid;
+        grid-template-rows: 100px 20px 50px 50px 10px 100px;
+        row-gap: 20px;
+        
         &__preview {
-            margin-bottom: 20px;
-
             p {
                 margin-bottom: 20px;
                 font-size: 26px;
@@ -50,7 +51,6 @@
 
         .size {
             display: inline-block;
-            margin-bottom: 20px;
         }
 
         &__buy {
@@ -59,37 +59,25 @@
             -webkit-box-align: center;
             -ms-flex-align: center;
             align-items: center;
-            margin-bottom: 20px;
-            margin-top: 20px;
-
-            &-favorites {
-                display: -webkit-box;
-                display: -ms-flexbox;
-                display: flex;
-                -webkit-box-pack: center;
-                -ms-flex-pack: center;
-                justify-content: center;
-                -webkit-box-align: center;
-                -ms-flex-align: center;
-                align-items: center;
-
-                button {
+            
+            .bttnCartOff, .bttnCartOn{
+                margin-right: 0;
+                border-radius: 5px 0 0 5px;
+            }
+                .bttnFavoritesOn, .bttnFavoritesOff  {
                     width: 50px;
                     height: 50px;
                     background-color: rgba(242, 240, 240, 0.578);
-                    border-radius: 5px;
+                    border-radius: 0 5px 5px 0;
                     font-size: 35px;
                     -webkit-transition: all 0.4s;
                     -o-transition: all 0.4s;
                     transition: all 0.4s;
                 }
 
-            }
         }
 
         &__characteristic {
-            margin-top: 20px;
-            opacity: 0.9;
 
             h4 {
                 font-size: 22px;
@@ -102,15 +90,14 @@
                 -webkit-box-pack: left;
                 -ms-flex-pack: left;
                 justify-content: left;
-                gap: 40px;
-                margin-top: 20px;
+                padding-top: 20px;
 
 
                 &-country,
                 &-material {
                     small {
                         opacity: 0.7;
-                        font-size: 14px;
+                        font-size: 12px;
                     }
 
                     p {
@@ -145,7 +132,7 @@
             }
 
             &__buy {
-                margin-left: 50px;
+                
             }
 
             .sizes,
@@ -154,6 +141,13 @@
                 -ms-flex-pack: center;
                 justify-content: center;
             }
+        }
+    }
+}
+@media screen and (max-width: 425px) {
+    .wrap{
+        &__photo {
+            margin: 20px auto;
         }
     }
 }
