--- a/src/app.scss
+++ b/src/app.scss
@@ -23,11 +23,14 @@
             background-color: #e45759;
         }
     }
+    -webkit-tap-highlight-color: transparent; 
+    --highlight-color: transparent;
 }
 
 button{
     border: none;
     cursor: pointer;
+
 }
 
 .bttn__link{
