--- a/src/components/Modal/Modal.scss
+++ b/src/components/Modal/Modal.scss
@@ -9,7 +9,34 @@
     display: grid;
     background-color: black;
     z-index: 90;
+    
+    .carousel{
+        position: absolute;
+        width: 250px;
+        height: 100%;
+        font-size: 30px;
+        background-color: transparent;
+        color: rgba(255, 255, 255, 0.415);
+        -webkit-filter: blur(1px);
+                filter: blur(1px);
+        -webkit-transition: background-color .5s;
+        -o-transition: background-color .5s;
+        transition: background-color .5s;
 
+        z-index: 11;
+        &:hover{
+            background-color: rgba(255, 255, 255, 0.041);
+        }
+        
+        &.prev{
+            top: 0;
+            left: 0;
+        }
+        &.next{
+            right: 0;
+            bottom: 0;
+        }
+    }
     &__bg {
         position: absolute;
         width: 100%;
@@ -24,15 +51,15 @@
 
 
         filter: blur(45px);
-        -webkit-transition: background-image 1.2s ease-in-out;
-        -o-transition: background-image 1.2s ease-in-out;
-        transition: background-image 1.2s ease-in-out;
+        -webkit-transition: background-image .5s ease-in-out;
+        -o-transition: background-image .5s ease-in-out;
+        transition: background-image .5s ease-in-out;
     }
 
     &__close {
         position: absolute;
-        right: 50px;
-        top: 50px;
+        right: 40px;
+        top: 40px;
         z-index: 12;
 
         width: 45px;
@@ -70,10 +97,26 @@
         -webkit-box-align: end;
         -ms-flex-align: end;
         align-items: flex-end;
+
         z-index: 10;
         overflow: hidden;
 
         &-img {
+
+            &.animateOn {
+                -webkit-animation-name: animationOn;
+                animation-name: animationOn;
+                -webkit-animation-duration: 300ms;
+                animation-duration: 300ms;
+            }
+            
+            &.animateOff {
+                -webkit-animation-name: animationOff;
+                animation-name: animationOff;
+                -webkit-animation-duration: 300ms;
+                animation-duration: 300ms;
+
+            }
 
             -webkit-transition: all 1s;
 
@@ -126,19 +169,6 @@
     }
 }
 
-.animateOn {
-    -webkit-animation-name: animationOn;
-    animation-name: animationOn;
-    -webkit-animation-duration: 500ms;
-    animation-duration: 500ms;
-}
-
-.animateOff {
-    -webkit-animation-name: animationOff;
-    animation-name: animationOff;
-    -webkit-animation-duration: 500ms;
-    animation-duration: 500ms;
-}
 
 @-webkit-keyframes animationOn {
     0% {
@@ -217,6 +247,15 @@
 @media screen and (max-width: 768px) {
 
     .modal {
+        .carousel{
+            padding: 0 10px;
+            &.prev{
+                text-align: left;
+            }
+            &.next{
+                text-align: right;
+            }
+        }
         &__carousel {
             grid-template-rows: 60px;
     }
@@ -228,6 +267,9 @@
 @media screen and (max-width: 426px) {
     .modal {
 
+        .carousel{
+            width: 150px;
+        }
         &__item {
             grid-template-columns: 1fr;
             -webkit-box-align: center;
@@ -235,6 +277,7 @@
                     align-items: center;
 
             &-img {
+                width: 100%;
                 height: 350px;
             }
         }
