--- a/src/app.scss
+++ b/src/app.scss
@@ -10,19 +10,7 @@
 
     -webkit-box-sizing: border-box;
             box-sizing: border-box;
-    letter-spacing: 1px;
 
-
-    &::-webkit-scrollbar{
-        width: 10px;
-    }
-    &::-webkit-scrollbar-thumb {
-        background-color: #FF6163;
-        border-radius:2px;        
-        &:hover{
-            background-color: #e45759;
-        }
-    }
     -webkit-tap-highlight-color: transparent; 
     --highlight-color: transparent;
 }
@@ -36,6 +24,7 @@ button{
 .bttn__link{
     background-size: 25px;
     background-repeat: no-repeat;
+    background-position: center center;
     width: 25px;
     height: 25px;
 }
@@ -74,12 +63,13 @@ hr{
 }
 
 .bttnFavoritesOn{
-    font-size: 30px;
+    background-image: url('../src/assets/navigation/heart.png');
+    background-size: 20px;
 }
 
 .bttnFavoritesOff{
-    color:#ff6163;
-    font-size: 22px;
+    background-image: url('../src/assets/navigation/heart_full.png');
+    background-size: 20px;
 }
 
 .bttnCartOff, .bttnCartOn{
