--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -107,21 +107,8 @@
         }
 
         .favorites-link {
-            display: -webkit-box;
-            display: -ms-flexbox;
-            display: flex;
-            -webkit-box-align: center;
-            -ms-flex-align: center;
-            align-items: center;
-            color: black;
-
-            font-size: 35px;
-
-            span {
-                right: -11px;
-            }
+            background-image: url('../../assets/navigation/heart.png');
         }
-
         .cart-link {
             background-image: url('../../assets/navigation/shopping_cart_FILL0_wght400_GRAD0_opsz48.png');
         }
