--- a/src/components/Modal/Modal.scss
+++ b/src/components/Modal/Modal.scss
@@ -24,9 +24,6 @@
         transition: background-color .5s;
 
         z-index: 11;
-        &:hover{
-            background-color: rgba(255, 255, 255, 0.041);
-        }
         
         &.prev{
             top: 0;
@@ -46,11 +43,9 @@
         background-size: cover;
         z-index: 0;
 
-
         -webkit-filter: blur(45px);
-
-
         filter: blur(45px);
+        
         -webkit-transition: background-image .5s ease-in-out;
         -o-transition: background-image .5s ease-in-out;
         transition: background-image .5s ease-in-out;
@@ -144,9 +139,6 @@
         z-index: 12;
 
         &__items {
-
-            width: 100%;
-            height: 100%;
             border: 3px solid #FF6163;
             border-radius: 5px;
             padding: 2px;
@@ -158,6 +150,7 @@
             }
 
             &-activeImg {
+                display: block;
                 width: 10px;
                 height: 10px;
                 margin: 0 auto;
@@ -251,9 +244,11 @@
             padding: 0 10px;
             &.prev{
                 text-align: left;
+                width: 40%;
             }
             &.next{
                 text-align: right;
+                width: 40%;
             }
         }
         &__carousel {
@@ -268,22 +263,35 @@
     .modal {
 
         .carousel{
-            width: 150px;
+            opacity: .1;
         }
         &__item {
             grid-template-columns: 1fr;
-            -webkit-box-align: center;
-                -ms-flex-align: center;
-                    align-items: center;
-
-            &-img {
-                width: 100%;
-                height: 350px;
-            }
         }
 
         &__carousel {
-            display: none;
+            grid-template-rows: none;
+            &__items{
+                position: relative;
+                width: 12px;
+                height: 4px;
+                border: 1px solid transparent;
+                background-color: rgba(255, 255, 255, 0.612);
+                &-img{
+                    display: none;
+                }
+                &-activeImg{
+                    position: absolute;
+                    top: -1px;
+                    left: -1px;
+                    margin: 0;
+                    width: 12px;
+                    height: 4px;
+                    padding: 2px;
+                    border: 1px solid transparent;
+                    border-radius: 40%;
+                }
+            }        
         }
 
         &__close {
