--- a/src/components/Products/Products.scss
+++ b/src/components/Products/Products.scss
@@ -5,34 +5,40 @@
     &__img {
         position: relative;
         cursor: pointer;
-
+        overflow: hidden;
+        border-radius: 10px;
+        
         button {
-
             position: absolute;
             right: 10px;
             top: 10px;
 
-            display: grid;
-            -ms-flex-line-pack: center;
-                align-content: center;
             width: 35px;
             height: 35px;
             
             background-color: rgba(255, 255, 255, 0.564);
             border-radius: 50%;
-            
+            z-index: 5;
 
-            &:hover {
-                opacity: .8;
-            }
+            &:hover { opacity: .8;}
         }
 
         &-photo {
             width: 100%;
             height: 100%;
-            border-radius: 10px;
             -o-object-fit: cover;
                object-fit: cover;
+            
+               -webkit-transition: -webkit-transform .5s;
+            transition: -webkit-transform .5s;
+            -o-transition: transform .5s;
+            transition: transform .5s, -webkit-transform .5s;
+
+               &:hover{
+                -webkit-transform: scale(1.2);
+                    -ms-transform: scale(1.2);
+                        transform: scale(1.2);
+            }
         }
     }
 
