--- a/src/pages/CartPage/CartPage.scss
+++ b/src/pages/CartPage/CartPage.scss
@@ -1,6 +1,7 @@
 
 .carts {
     // ALL CARTS 
+    position: relative;
     display: grid;
     grid-template-columns: 70% 30%;
     -webkit-box-pack: space-evenly;
@@ -53,10 +54,7 @@
                     background-size: 20px;
                     width: 20px;
                     height: 20px;
-                    font-size: 16px;
 
-                    background-position: center center;
-                    background-repeat: no-repeat;
                     background-color: transparent;
                 }
 
@@ -75,12 +73,14 @@
                 }
 
                 .bttnFavoritesOn {
+                    background-size: 12px;
                     -webkit-transform: scale(1.5);
                     -ms-transform: scale(1.5);
                     transform: scale(1.5);
                 }
 
                 .bttnFavoritesOff {
+                    background-size: 15px;
                     -webkit-transform: scale(1.2);
                     -ms-transform: scale(1.2);
                     transform: scale(1.2);
