--- a/src/pages/ComparePage/ComparePage.scss
+++ b/src/pages/ComparePage/ComparePage.scss
@@ -1,7 +1,7 @@
 
 .container{
     display: grid;
-    grid-template-columns: repeat(4, 220px);
+    grid-template-columns: repeat(4, 300px);
     -webkit-box-align: stretch;
         -ms-flex-align: stretch;
             align-items: stretch;
@@ -32,60 +32,41 @@
 }
 
 .compare{
-    width: 100%;
-    height: 80%;
-    
+
     &__img{
         width: 100%;
-        height: 100%;
-        max-height: 300px;
-        min-height: 250px;
         border-radius: 5px;
     }
     &__information{
 
         &-p{
-            height: 15px;
-            font-size: 10px;
+            height: 40px;
+            font-size: 14px;
             overflow-y: hidden;
         }
 
         &-feather{
-            display: -webkit-box;
-            display: -ms-flexbox;
-            display: flex;
-            width: 90%;
-            margin: 0 auto;
-            -webkit-box-pack: justify;
-                -ms-flex-pack: justify;
-                    justify-content: space-between;
+            display: grid;
+            gap: 30px;
+            margin-bottom: 20px;
 
-            div{
-                small{
-                    font-size: 10px;
-                    color: rgba(36, 36, 36, 0.858);
+            small{
+                    height: 10px;
+                    font-size: 16px;
+                    color: rgba(158, 154, 154, 0.858);
                 }
                 p{
-                    font-size: 18px;
-                    font-weight: 400;
+                    font-size: 20px;
                 }
-            }
         }
         &-bttn{
-            display: -webkit-box;
-            display: -ms-flexbox;
-            display: flex;
-            -ms-flex-pack: distribute;
-                justify-content: space-around;
-            -webkit-box-align: center;
-                -ms-flex-align: center;
-                    align-items: center;
-            margin: 20px 10px;
-            
+
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            place-items: center;
 
             button{
                 background-position: center center;
-                background-size: 26px;
                 background-repeat: no-repeat;
                 width: 30px;
                 height: 30px;
@@ -96,19 +77,12 @@
 
             }
             
-            .bttnFavoritesOn{
-                margin-top: -10px;
-            }
-            .bttnFavoritesOff{
-                margin-top: -5px;
-            }
             .bttnCompareOn{
                 background-image: url('../../assets//navigation/delete_cart.png');
 
                 &:hover{
                     background-image: url('../../assets//navigation/delete__sweep.png');
                     opacity: .8;
-                    outline: none;
                 }
             }
         }
