--- a/src/pages/FilterPage/FilterPage.scss
+++ b/src/pages/FilterPage/FilterPage.scss
@@ -396,15 +396,6 @@
 }
 
 
-@media screen and (max-width: 425px) {
-    .filter {
-        &__filteredProducts {
-            grid-template-columns: repeat(auto-fit, 150px);
-            grid-template-rows: 300px;
-        }
-    }
-}
-
 
 
 
@@ -445,13 +436,29 @@
     .filter{
 
         &__options{
-
+            -webkit-transform: translateY(300px);
+                -ms-transform: translateY(300px);
+                    transform: translateY(300px);
             row-gap: 10px;
             padding: 0 20px;
 
+            -webkit-transition: -webkit-transform 1s ease-in-out;
+
+            transition: -webkit-transform 1s ease-in-out;
+
+            -o-transition: transform 1s ease-in-out;
+
+            transition: transform 1s ease-in-out;
+
+            transition: transform 1s ease-in-out, -webkit-transform 1s ease-in-out;
             &.active {
+                -webkit-transform: translateY(0);
+                    -ms-transform: translateY(0);
+                        transform: translateY(0);
+                        
                 grid-template-rows: 100px repeat(3, 40px);
                 grid-template-columns: 1fr;
+                
             }
 
             .price{
@@ -488,6 +495,17 @@
         }
     }
 }
+@media screen and (max-width: 425px) {
+    .filter {
+        &__filteredProducts {
+            grid-template-columns: repeat(auto-fit, 150px);
+            grid-template-rows: 300px;
+            
+        }
+    }
+}
+
+
 @media screen and (max-width: 410px) {
     .filter{
         &__options .input{
