--- a/src/pages/SingleProductPage/SingleProduct.scss
+++ b/src/pages/SingleProductPage/SingleProduct.scss
@@ -12,7 +12,6 @@
             position: absolute;
             top: 15px;
             right: 15px;
-            background-position: center center;
             padding: 20px;
             -webkit-transition: background-image .5s, background-color .5s;
             -o-transition: background-image .5s, background-color .5s;
@@ -28,7 +27,7 @@
 
     &__information {
         display: grid;
-        grid-template-rows: 100px 20px 50px 50px 10px 100px;
+        grid-template-rows: 120px 20px 50px 50px 10px 100px;
         row-gap: 20px;
         
         &__preview {
@@ -50,7 +49,7 @@
         }
 
         .size {
-            display: inline-block;
+            display: block;
         }
 
         &__buy {
@@ -69,7 +68,6 @@
                     height: 50px;
                     background-color: rgba(242, 240, 240, 0.578);
                     border-radius: 0 5px 5px 0;
-                    font-size: 35px;
                     -webkit-transition: all 0.4s;
                     -o-transition: all 0.4s;
                     transition: all 0.4s;
@@ -131,10 +129,6 @@
                 margin-bottom: 20px;
             }
 
-            &__buy {
-                
-            }
-
             .sizes,
             &__buy {
                 -webkit-box-pack: center;
@@ -146,6 +140,9 @@
 }
 @media screen and (max-width: 425px) {
     .wrap{
+        &__information{
+            grid-template-rows: none;
+        }
         &__photo {
             margin: 20px auto;
         }
