--- a/src/app.scss
+++ b/src/app.scss
@@ -13,6 +13,20 @@
 
     -webkit-tap-highlight-color: transparent; 
     --highlight-color: transparent;
+
+
+
+    &::-webkit-scrollbar{
+        width: 10px;
+    }
+    &::-webkit-scrollbar-thumb {
+        background-color: #FF6163;
+        border-radius:2px;        
+        &:hover{
+            background-color: #e45759;
+        }
+    }
+
 }
 
 button{
