--- a/src/components/Products/Products.scss
+++ b/src/components/Products/Products.scss
@@ -7,6 +7,8 @@
         cursor: pointer;
         overflow: hidden;
         border-radius: 10px;
+        width: 200px;
+        height:300px;
         
         button {
             position: absolute;
