--- a/src/app.scss
+++ b/src/app.scss
@@ -1,10 +1,8 @@
-
-@font-face {
-    font-family: 'Montserrat';
-    src: url('https://fonts.gstatic.com/s/montserrat/v22/4UzDkCkUz7ocWi6FAtL6IWcNGA.woff2') format('woff2');
-    font-display: swap;
-  }
 *{
+    font-family: "Montserrat", serif;
+    font-display: swap;
+    font-optical-sizing: auto;
+    font-style: normal;
     margin: 0;
     padding: 0;
     text-decoration: none;
