--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -27,7 +27,7 @@
         display: grid;
         grid-template-columns: repeat(3, 60px);
         grid-column-gap: 40px;
-
+        
         -webkit-box-pack: center;
 
         -ms-flex-pack: center;
@@ -35,7 +35,7 @@
         justify-content: center;
         justify-items: center;
 
-        margin: 20px 0;
+        padding: 10px;
 
         img {
             width: 30px;
@@ -48,7 +48,7 @@
 @media screen and (max-width: 800px) {
     .footer {
         &__icons {
-            margin: 20px 0 100px 0;
+            padding: 20px 0 100px 0;
         }
     }
 }
