--- a/src/components/Products/Products.scss
+++ b/src/components/Products/Products.scss
@@ -7,8 +7,6 @@
         cursor: pointer;
         overflow: hidden;
         border-radius: 10px;
-        width: 200px;
-        height:300px;
         
         button {
             position: absolute;
@@ -48,7 +46,7 @@
     &__preview {
         display: grid;
         grid-template-columns: 1fr;
-        grid-template-rows: 50% 50%;
+        grid-template-rows: 40px 30px;
         background-color: rgba(245, 242, 242, 0.235);
 
         &-title {
@@ -56,7 +54,8 @@
             padding-top: 10px;
             padding-bottom: 10px;
             overflow: hidden;
-
+            text-overflow: ellipsis;
+            white-space: nowrap;
             &::first-letter {
                 text-transform: uppercase;
             }
@@ -74,11 +73,12 @@
                     align-items: center;
             padding: 0 10px;
             p {
-                font-size: 26px;
+                font-size: 20px;
                 font-weight: 500;
             }
 
             a {
+                display: inline-block;
                 width: 35px;
                 height: 35px;
 
@@ -104,10 +104,18 @@
             }
             &-buy{
                 p{
-                    font-size: 20px;
+                    font-size: 18px;
                 }
             }
         }
     }
 }
-
+@media screen and (max-width: 426px) {
+    .product {
+        grid-template-rows: 60% 40%;
+        &__img {
+            width: 150px;
+            height: 200px;
+        }
+    }
+}
