--- a/src/app.scss
+++ b/src/app.scss
@@ -1,5 +1,5 @@
 *{
-    font-family: "Montserrat", serif;
+    font-family: "Montserrat", Arial, sans-serif;
     font-display: swap;
     font-optical-sizing: auto;
     font-style: normal;
