--- a/src/components/PreviewGallery/PreviewGallery.scss
+++ b/src/components/PreviewGallery/PreviewGallery.scss
@@ -8,6 +8,8 @@
     margin-top: 20px;
     margin-bottom: 20px;
     
+
+    
     &::-webkit-scrollbar{
         height: 5px;
         border-radius:5px;    
@@ -54,6 +56,50 @@
     }
     }
 }
+.gallery__panel {
+    display: flex;
+    animation: scroll 10s linear infinite alternate;
+
+    @keyframes scroll {
+        0% {
+            transform: translateX(-40%);
+        }
+        100% {
+            transform: translateX(-73%); 
+        }
+    }
+}
+@media screen and (min-width: 425px) {
+    @keyframes scroll {
+        0% {
+            transform: translateX(-40%);
+        }
+        100% {
+            transform: translateX(-83%); 
+        }
+    }
+}
+@media screen and (min-width: 768px) {
+    @keyframes scroll {
+        0% {
+            transform: translateX(-30%);
+        }
+        100% {
+            transform: translateX(-65%); 
+        }
+    }
+}
+@media screen and (min-width: 1025px) {
+    @keyframes scroll {
+        0% {
+            transform: translateX(-10%);
+        }
+        100% {
+            transform: translateX(-33%); 
+        }
+    }
+}
+
 
 @media screen and (max-width: 700px) {
     .gallery{
