--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -150,29 +150,16 @@
 
 @media screen and (max-width: 425px) {
     .header {
-        
         grid-template-columns: 1fr 180px 1fr;
-        
-        &__logo {
 
-            &.hide img {
-                -webkit-transform: none;
-                    -ms-transform: none;
-                        transform: none;
-            }
-
-            &.show img {
-               -webkit-transform: none;
-                   -ms-transform: none;
-                       transform: none;
-            }
-
-            img {
-                -webkit-transition: none;
-                -o-transition: none;
-                transition: none;
-                width: 100%;
-            }
+        &__options {
+            height: 60px;
         }
+        
+&__logo {
+    img {
+        width: 100%;
+        transition: none;
+        transform: none;
     }
-}
+}}}
