--- a/src/components/Modal/Modal.scss
+++ b/src/components/Modal/Modal.scss
@@ -83,16 +83,11 @@
     }
 
     &__item {
-        display: grid;
-        grid-template-columns: 400px;
-        margin: 0 auto;
-        -webkit-box-pack: center;
-        -ms-flex-pack: center;
-        justify-content: center;
-        -webkit-box-align: end;
-        -ms-flex-align: end;
-        align-items: flex-end;
-
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
         z-index: 10;
         overflow: hidden;
 
@@ -119,23 +114,25 @@
 
             transition: all 1s;
             width: 100%;
-            height: 400px;
+            height: 100%;
             -o-object-fit: contain;
             object-fit: contain;
+            z-index: 10;
         }
     }
 
     &__carousel {
+        position: fixed;
+        bottom: 0;
+        left: 0;
+        width: 100%;
         display: grid;
         grid-auto-flow: column;
-        overflow: auto;
         grid-template-rows: 130px;
-        
-        -ms-flex-pack: distribute;
-            justify-content: space-around;
-            -ms-flex-line-pack: distribute;
-                align-content: space-around;
-        margin-bottom: 10px;
+
+        justify-content: space-around;
+        align-content: space-around;
+        margin-bottom: 40px;
         z-index: 12;
 
         &__items {
@@ -155,7 +152,7 @@
                 height: 10px;
                 margin: 0 auto;
                 margin-top: 10px;
-                background-color: white;
+                background-color: #FF6163;
                 border-radius: 50%;
             }
         }
@@ -215,28 +212,6 @@
 
 }
 
-@media screen and (max-width: 1400px) {
-    .modal {
-
-        &__item {
-            grid-template-columns: 400px;
-
-            &-img {
-                height: 400px;
-            }
-        }
-    }
-}
-
-@media screen and (max-width: 1024px) {
-    .modal {
-
-        &__carousel {
-                grid-template-rows: 100px;
-        }
-    }
-}
-
 @media screen and (max-width: 768px) {
 
     .modal {
@@ -265,12 +240,8 @@
         .carousel{
             opacity: .1;
         }
-        &__item {
-            grid-template-columns: 1fr;
-        }
 
         &__carousel {
-            grid-template-rows: none;
             &__items{
                 position: relative;
                 width: 12px;
