--- a/src/pages/SingleProductPage/SingleProduct.scss
+++ b/src/pages/SingleProductPage/SingleProduct.scss
@@ -1,12 +1,12 @@
 .wrap {
     display: grid;
-    grid-template-columns: repeat(2, minmax(300px, 1fr));
-    margin-bottom: 70px;
+    grid-template-columns: 600px 1fr;
+    grid-column-gap: 20px;
     margin-top: 20px;
 
     &__photo {
         position: relative;
-        width: 90%;
+        width: 100%;
 
         button {
             position: absolute;
@@ -17,7 +17,6 @@
             -o-transition: background-image .5s, background-color .5s;
             transition: background-image .5s, background-color .5s;
             border-radius: 50%;
-
         }
         &-img {
             width: 100%;
@@ -34,7 +33,6 @@
             p {
                 margin-bottom: 20px;
                 font-size: 26px;
-                opacity: 0.7;
 
                 &::first-letter {
                     text-transform: uppercase;
@@ -44,7 +42,6 @@
             &-price {
                 font-size: 32px;
                 font-weight: 400;
-                opacity: 0.7;
             }
         }
 
@@ -54,7 +51,7 @@
 
         &__buy {
             display: grid;
-            grid-template-columns: 50% 50px;
+            grid-template-columns: 500px 50px;
             -webkit-box-align: center;
             -ms-flex-align: center;
             align-items: center;
@@ -79,7 +76,7 @@
 
             h4 {
                 font-size: 22px;
-                font-weight: 100;
+                font-weight: 200;
             }
 
             &__div {
@@ -94,14 +91,13 @@
                 &-country,
                 &-material {
                     small {
-                        opacity: 0.7;
                         font-size: 12px;
                     }
 
                     p {
                         font-size: 20px;
                         margin-top: 10px;
-                        font-weight: 100;
+                        font-weight: 200;
                     }
                 }
             }
@@ -116,7 +112,7 @@
         display: block;
 
         &__photo {
-            width: 50%;
+            width: 60%;
             margin: 0 auto;
         }
 
@@ -140,8 +136,15 @@
 }
 @media screen and (max-width: 425px) {
     .wrap{
+            &__photo {
+                width: 90%;
+        }
         &__information{
             grid-template-rows: none;
+
+            &__buy{
+                grid-template-columns: 300px 50px;
+            }
         }
         &__photo {
             margin: 20px auto;
