--- a/src/components/Skeleton.scss
+++ b/src/components/Skeleton.scss
@@ -35,3 +35,15 @@
         }
     }
 }
+
+@keyframes pulse {
+    0% {
+        background-color: #e0e0e0;
+    }
+    50% {
+        background-color: #f0f0f0;
+    }
+    100% {
+        background-color: #e0e0e0;
+    }
+}
